Added sharing, changed routing

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,17 @@
 {
   "projects": {
     "default": "draugsapp"
+  },
+  "targets": {
+    "draugsapp": {
+      "hosting": {
+        "app": [
+          "draugsapp"
+        ],
+        "dev": [
+          "draugsapp-dev"
+        ]
+      }
+    }
   }
 }
