--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,8 @@
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ]
   },
-  "hosting": {
+  "hosting": [{
+    "target": "app",
     "public": "www",
     "ignore": [
       "firebase.json",
@@ -23,6 +24,21 @@
       }
     ]
   },
+  {
+    "target": "dev",
+    "public": "www",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }],
   "storage": {
     "rules": "storage.rules"
   }
