--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^4.11.8",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "capacitor-google-analytics": "^1.0.1",
     "core-js": "^2.5.4",
     "firebase": "^7.6.2",
     "firebase-tools": "^7.12.0",
@@ -48,6 +49,7 @@
     "@angular/language-service": "~8.1.2",
     "@capacitor/cli": "1.4.0",
     "@ionic/angular-toolkit": "^2.1.2",
+    "@types/googlemaps": "^3.39.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
